--- a/_config.yml
+++ b/_config.yml
@@ -19,9 +19,9 @@
 # in the templates via {{ site.myvariable }}.
 
 #title: Your awesome title
-email: gooddemads@gmail.com
-phone: 06 72 16 76 34
-address: 6 Rue du Pré Botin 77160 Provins 
+email: test@test.com
+phone: 07 53 31 99 11 
+address: 193 Avenue Henri Barbusse 93700 Drancy 
 #  Write an awesome description for your new site here. You can edit this
 #  line in _config.yml. It will appear in your document head meta (for
 #  Google search results) and in your feed.xml site description.
