--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 #title: Your awesome title
-email: test@test.com
+email: koucic@gmail.com
 phone: 07 53 31 99 11 
 address: 193 Avenue Henri Barbusse 93700 Drancy 
 #  Write an awesome description for your new site here. You can edit this
